fixes statistics section on mobile devices

--- a/apps/intro/static/intro/css/stylesheet.css
+++ b/apps/intro/static/intro/css/stylesheet.css
@@ -58,9 +58,17 @@
     line-height: 25px;
     text-align: center;
     margin: 42px;
-    margin-right: 100px;
-    margin-left: 100px;
+    /*margin-right: 100px;*/
+    /*margin-left: 100px;*/
     padding-top: 50px;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="circle"] {
+    margin-bottom: -65px;
+    margin-bottom: -65px;
+  }
 }
 
 .circle a {
